--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeCreditoBanco/_GridViewPartial_comprobante_detalle_Credito.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeCreditoBanco/_GridViewPartial_comprobante_detalle_Credito.cshtml
@@ -3,15 +3,15 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_comprobante_detalle";
-        settings.CallbackRouteValues = new { Controller = "ComprobanteContable", Action = "GridViewPartial_comprobante_detalle", Area = "Contabilidad", IdTipoCbte = Model == null ? 0 : Model.IdTipoCbte , IdCbteCble = Model == null ? 0 : Model.IdCbteCble };
+        settings.CallbackRouteValues = new { Controller = "NotaDeCreditoBanco", Action = "GridViewPartial_comprobante_detalle_Credito", Area = "Banco", IdTipoCbte = Model == null ? 0 : Model.IdTipoCbte , IdCbteCble = Model == null ? 0 : Model.IdCbteCble };
         settings.KeyFieldName = "secuencia";
         settings.Width = Unit.Percentage(100);
 
 
         settings.SettingsEditing.Mode = GridViewEditingMode.Inline;
-        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "ComprobanteContable", Action = "EditingAddNew", Area = "Contabilidad" };
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ComprobanteContable", Action = "EditingUpdate", Area = "Contabilidad" };
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "ComprobanteContable", Action = "EditingDelete", Area = "Contabilidad" };
+        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "NotaDeCreditoBanco", Action = "EditingAddNew", Area = "Banco" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "NotaDeCreditoBanco", Action = "EditingUpdate", Area = "Banco" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "NotaDeCreditoBanco", Action = "EditingDelete", Area = "Banco" };
 
         settings.CommandColumn.Visible = true;
         settings.CommandColumn.ShowNewButton = true;
@@ -83,6 +83,8 @@
 
             });
         });
+
+        settings.ClientSideEvents.EndCallback = "GetValorTotal";
     });
 
 }
