--- a/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Nuevo.cshtml
@@ -17,17 +17,54 @@
         $("#IdBanco").change(function () {
             armar_diario();
         });
-        $("#IdTipoNota").change(function () {
-            armar_diario();
-        });
         armar_diario();
     });
     var selectedIDs;
+    function OnBeginCallback(s, e) {
+        e.customArgs["selectedIDs"] = selectedIDs;
+    }
+    function OnSelectionChanged(s, e) {
+        s.GetSelectedFieldValues("IdCbteCble", GetSelectedFieldValuesCallback);
+    }
+    function GetSelectedFieldValuesCallback(values) {
+        //Capture all selected keys
+        selectedIDs = values.join(',');
+    }
+        function AddOP() {
+        var datos = {
+            IDs: selectedIDs
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("EditingAddNew", "NotaDeDebitoBanco",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+            },
+            error: function (error) {
+            }
+        });
+        selectedIDs = "";
+        GridView_DebitoBanco_op_x_cruzar.PerformCallback();
+        GridView_DebitoBanco_op_x_cruzar.UnselectRows();
+        GridView_DebitoBanco_op.PerformCallback();
+        $("#OpModal").modal("hide");
+    }
+
+    function MostrarModal() {
+        selectedIDs = "";
+        GridView_DepositoBanco_x_cruzar.PerformCallback();
+        GridView_DepositoBanco_x_cruzar.UnselectRows();
+        $("#OpModal").modal("show");
+    }
 
     function armar_diario() {
         var datos = {
-            IdBanco: $("#IdBanco").val(),
-            IdTipoNota : $("#IdTipoNota").val()
+            IdBanco: $("#IdBanco").val()
         }
         $.ajax({
             type: 'POST',
@@ -83,6 +120,26 @@
         </div>
 
     }
+
+    <div class="modal fade" id="OpModal" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Ordenes de pago</h4>
+                </div>
+                <div class="modal-body">
+                    @Html.Action("GridViewPartial_DepositoBanco_x_cruzar")
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" onclick="AddOP();">Aceptar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
     <div class="row">
         <div class="col-md-12">
@@ -142,12 +199,29 @@
     <div id="Tabs" role="tabpanel">
         <ul class="nav nav-tabs" role="tablist">
             <li class="active">
+                <a href="#tab_op" aria-controls="vales" role="tab" data-toggle="tab">Ordenes de pago</a>
+            </li>
+            <li>
                 <a href="#tab_diario" aria-controls="vales" role="tab" data-toggle="tab">Diario</a>
             </li>
         </ul>
         <div class="tab-content" style="padding-top: 20px">
-            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_diario">
-                @Html.Action("GridViewPartial_comprobante_detalle_Credito", new { Area = "Banco", Controller = "NotaDeCreditoBanco" })
+            <div class="tab-content" style="padding-top: 20px">
+                <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_op">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <button type="button" class="btn btn-primary" id="btn_buscar_op" onclick="MostrarModal();">
+                                <i class="fa fa-search"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <br />
+                    @Html.Action("GridViewPartial_DepositoBanco_det")
+                </div>
+
+                <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_diario">
+                    @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
+                </div>
             </div>
         </div>
     </div>
