--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ATS/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ATS/Nuevo.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Core.Erp.Info.CuentasPorPagar.ATS.ATS_Info.ats_Info
 @{
     ViewBag.Title = "Anexo trasnsacciona simplificado";
-    if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
-    {
-        Response.Redirect("~/Account/Login");
-    }
+    //if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
+    //{
+    //    Response.Redirect("~/Account/Login");
+    //}
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -26,8 +26,25 @@
             
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="info_persona.pe_apellido">Periodo*</label>
+                    <label for="info_periodo.IdanioFiscal">Periodo*</label>
+                    @Html.DevExpress().ComboBoxFor(q => q.info_periodo.IdanioFiscal, settings =>
+               {
+                   settings.Name = "IdPeriodo";
+                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                   settings.Properties.DisplayFormatString = "[{0}] - {1}-{2}";
+                   settings.Properties.Columns.Add("IdanioFiscal", "Año").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                   settings.Properties.Columns.Add("pe_FechaIni", "Fecha Inicio").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                   settings.Properties.Columns.Add("pe_FechaFin", "Fecha fin").Width = System.Web.UI.WebControls.Unit.Percentage(80);
 
+                   ////Campo ID
+                   settings.Properties.ValueField = "IdPeriodo";
+                   //settings.Properties.ValueType = typeof(string);
+                   //settings.Properties.TextField = "Descricpion";
+                   //Boton para seleccionar ningun registro
+                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+               }).BindList(ViewBag.lst_persona_tipo).GetHtml()
+                    @Html.ValidationMessageFor(q => q.info_periodo.IdPeriodo, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -58,11 +75,14 @@
 
             <div role="tabpanel" class="tab-pane active" style="margin-left: 2em;" id="tb_ventas">
                
+                @Html.Action("GridViewPartial_ventas");
 
             </div>
 
             <div role="tabpanel" class="tab-pane" id="tb_compras">
+                @Html.Action("GridViewPartial_compras");
 
+                
             </div>
 
 
