--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ATS/_GridViewPartial_compras.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ATS/_GridViewPartial_compras.cshtml
@@ -1,7 +1,7 @@
 @using System.Web.UI.WebControls;
 @{
     var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "_GridViewPartial_compras";
+        settings.Name = "GridViewPartial_compras";
         settings.CallbackRouteValues = new { Controller = "ATS", Action = "GridViewPartial_compras", Area = "CuentasPorPagar" };
         settings.KeyFieldName = "secuencia";
         settings.Width = Unit.Percentage(100);
