--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ATS/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ATS/Nuevo.cshtml
@@ -75,12 +75,12 @@
 
             <div role="tabpanel" class="tab-pane active" style="margin-left: 2em;" id="tb_ventas">
                
-                @Html.Action("GridViewPartial_ventas");
+                @Html.Action("GridViewPartial_ventas")
 
             </div>
 
             <div role="tabpanel" class="tab-pane" id="tb_compras">
-                @Html.Action("GridViewPartial_compras");
+                @Html.Action("GridViewPartial_compras")
               
             </div>
 
@@ -90,7 +90,8 @@
             </div>
 
             <div role="tabpanel" class="tab-pane" id="tb_retenciones">
-              
+                @Html.Action("GridViewPartial_retenciones")
+
             </div>
             <div role="tabpanel" class="tab-pane" id="tb_comprobantes_anulados">
 
