--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_distribucion_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_distribucion_det.cshtml
@@ -20,7 +20,9 @@
         settings.SettingsPager.Visible = true;
         settings.SettingsBehavior.AllowSelectByRowClick = false;
 
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
 
         //Configuración click derecho
         settings.SettingsContextMenu.Enabled = true;
