--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/_GridViewPartial_retenciones.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/_GridViewPartial_retenciones.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridViewPartial_retenciones";
-        settings.CallbackRouteValues = new { Controller = "ATS", Action = "GridViewPartial_retenciones", Area = "CuentasPorPagar" };
+        settings.CallbackRouteValues = new { Controller = "ATS", Action = "GridViewPartial_retenciones", Area = "Contabilidad" };
         settings.KeyFieldName = "secuencia";
         settings.Width = Unit.Percentage(100);
 
