--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/_GridViewPartial_ConciliacionBanco.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/_GridViewPartial_ConciliacionBanco.cshtml
@@ -59,8 +59,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdTipocbte = DataBinder.Eval(tc.DataItem, "IdTipocbte"), IdCbteCble = DataBinder.Eval(tc.DataItem, "IdCbteCble") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdTipocbte = DataBinder.Eval(tc.DataItem, "IdTipocbte"), IdCbteCble = DataBinder.Eval(tc.DataItem, "IdCbteCble") },
+                Html.ActionLink("Modificar", "Modificar", new { IdConciliacion = DataBinder.Eval(tc.DataItem, "IdConciliacion")}) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdConciliacion = DataBinder.Eval(tc.DataItem, "IdConciliacion")},
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -75,30 +75,23 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(150);
         });
-        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(10);
-        settings.Columns.Add("IdCbteCble", "ID").Width = Unit.Percentage(5);
+        settings.Columns.Add("IdConciliacion", "ID").Width = Unit.Percentage(5);
         settings.Columns.Add("ba_descripcion", "Cuenta").Width = Unit.Percentage(30);
-        settings.Columns.Add("cb_Observacion", "Observación").Width = Unit.Percentage(30);
+        settings.Columns.Add("Periodo", "Periodo").Width = Unit.Percentage(20);
+        settings.Columns.Add("co_Observacion", "Observación").Width = Unit.Percentage(30);
         settings.Columns.Add(column =>
         {
-            column.FieldName = "cb_Fecha";
+            column.FieldName = "co_Fecha";
             column.Caption = "Fecha";
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
             column.Width = Unit.Percentage(10);
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "cb_Valor";
-            column.Caption = "Valor";
-            column.PropertiesEdit.DisplayFormatString = "{0:N2}";
-            column.Width = Unit.Percentage(8);
         });
         settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(5);
         settings.Columns.Add(column =>
         {
             column.SetDataItemTemplateContent(c =>
             {
-                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("BAN_002", "BancoReportes", new { Area = "Reportes", IdTipocbte = DataBinder.Eval(c.DataItem, "IdTipocbte"), IdCbteCble = DataBinder.Eval(c.DataItem, "IdCbteCble") }, Request.Url.Scheme) + "');\"></span>");
+                //ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("BAN_002", "BancoReportes", new { Area = "Reportes", IdTipocbte = DataBinder.Eval(c.DataItem, "IdTipocbte"), IdCbteCble = DataBinder.Eval(c.DataItem, "IdCbteCble") }, Request.Url.Scheme) + "');\"></span>");
             });
             column.Width = Unit.Percentage(5);
         });
